k8s/namespaces.yaml
# Namespace for gameservers
apiVersion: v1
kind: Namespace
metadata:
  name: gameservers
---
# Namespace for infra
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
# Namespace for logging
apiVersion: v1
kind: Namespace
metadata:
  name: fluent-bit
