k8s/spammer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-tester
  namespace: default
spec:
  containers:
    - name: test
      image: busybox
      command: ["sh", "-c", "while true; do echo Hello Loki; sleep 5; done"]
