k8s/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus-kube-prometheus-prometheus
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090   # choose unused port
