k8s/wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"  # optional
    cert-manager.io/cluster-issuer: ${CERT_ISSUER}
spec:
  rules:
    - host: wiki.${HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki
                port:
                  number: 3000
